<resources>
    <string name="app_name">KarSan</string>
    <string name="KarSan">کارسان</string>
    <string name="Error">خطا</string>
    <string name="Message">پیغام</string>
    <string name="Reload">بارگذاری مجدد</string>
    <string name="Normal">عادی</string>
    <string name="Special">ویژه</string>
    <string name="instantaneous">فوری</string>
    <string name="Loading">در حال بارگذاری...</string>
    <string name="PleaseWait">لطفا صبر کنید</string>
    <string name="TryingAgain">تلاش دوباره</string>
    <string name="MinRights">حداقل حقوق (تومان)</string>
    <string name="MaxRights">حداکثر (تومان)</string>
    <string name="SearchFilters">فیلتر جستجو</string>
    <string name="FullTime">تمام وقت</string>
    <string name="PartTime">نیمه وقت</string>
    <string name="TornTime">پاره وقت</string>
    <string name="InsuranceHistory">سابقه بیمه</string>
    <string name="JobHistory">سابقه کار</string>
    <string name="IHave">دارم</string>
    <string name="IHaveNot">ندارم</string>
    <string name="Madrak">مدرک</string>
    <string name="Major">رشته تحصیلی</string>
    <string name="JobType">نوع کار</string>
    <string name="Major2">رشته تحصیلی:</string>
    <string name="ClearOptions">پاک کردن گزینه ها</string>
    <string name="Search">جستجو</string>
    <string name="Back">بازگشت</string>
    <string name="Salary_And_Benefits">حقوق و مزایا:</string>
    <string name="JobTime">زمان کاری:</string>
    <string name="Degree_Of_Education">مدرک تحصیلی:</string>
    <string name="Gender">جنسیت:</string>
    <string name="Gender2">جنسیت</string>
    <string name="Women">خانم</string>
    <string name="Man">آقا</string>
    <string name="ManAndWomen">آقا / خانم</string>
    <string name="HoursOfWork">ساعت کاری:</string>
    <string name="The_Age_Range">محدوده سنی:</string>
    <string name="Has_Insurance">بیمه دارد:</string>
    <string name="Job_Type">نوع کار:</string>
    <string name="Yes">بله</string>
    <string name="No">خیر</string>
    <string name="Description">توضیحات</string>
    <string name="Call">تماس</string>
    <string name="Report_Abuse">گزارش تخلف</string>
    <string name="SMS">پیامک</string>
    <string name="from">از</string>
    <string name="until">تا</string>
    <string name="Toman">تومان</string>
    <string name="Login">ورود</string>
    <string name="Register">ثبت نام</string>
    <string name="Ok">باشه</string>
    <string name="Report">گزارش</string>
    <string name="estekhdami">استخدام شده</string>
    <string name="carjo">جویای کار</string>
    <string name="CountItem">تعداد آگهی ها</string>
    <string name="News_Summary">چکیده خبر</string>
    <string name="TextNews">متن خبر</string>
    <string name="CV">رزومه</string>
    <string name="MyKarsan">کارسان من</string>
    <string name="AddItem">درج آیتم</string>
    <string name="Name">نام: </string>
    <string name="Madrak2">مدرک: </string>
    <string name="Madrak3">مدرک تحصیلی: </string>
    <string name="BirthDate">تاریخ تولد: </string>
    <string name="DownloadCV">دانلود رزومه</string>
    <string name="AddCV">افزودن رزومه</string>
    <string name="EditProfile">ویرایش پروفایل</string>
    <string name="MyItems">آگهی های من</string>
    <string name="SelectedItems">آگهی های انتخاب شده</string>
    <string name="MyCv">رزومه من</string>
    <string name="Wallet">کیف پول</string>
    <string name="Rules_And_Support">قوانین و پشتیبانی</string>
    <string name="Share_App">ارسال برنامه</string>
    <string name="CallMe">تماس با ما</string>
    <string name="Complete_Profile">تکمیل پروفایل</string>
    <string name="Grade">مقطع تحصیلی</string>
    <string name="Insurances">سابقه بیمه</string>
    <string name="Insurances2">سابقه بیمه:</string>
    <string name="BirthDate2">تاریخ تولد (1378/03/10)</string>
    <string name="Certificates">گواهینامه</string>
    <string name="Certificates2">گواهینامه:</string>
    <string name="GradeOne">پایه یک</string>
    <string name="GradeTwo">ب 2</string>
    <string name="GradeThird">ب 1</string>
    <string name="DontHaveCertificate">ندارم</string>
    <string name="Motorcycle">موتور سیکلت</string>
    <string name="Record">ثبت</string>
    <string name="FullName">نام کامل</string>
    <string name="FullName2">نام کامل:</string>
    <string name="Sending">در حال ارسال</string>
    <string name="GettingInformation">در حال دریافت اطلاعات</string>
    <string name="ItemTitle">عنوان آگهی</string>
    <string name="ItemTitle2">عنوان آگهی *</string>
    <string name="Price">حقوق</string>
    <string name="MinPrice2">حداقل حقوق (تومان)</string>
    <string name="MaxPrice">حداکثر حقوق</string>
    <string name="MaxPrice2">حداکثر حقوق (تومان)</string>
    <string name="WorkingHour">ساعت کار</string>
    <string name="WorkingHour2">ساعت کار *</string>
    <string name="NationalCode">کد ملی</string>
    <string name="NationalCode2">کد ملی *</string>
    <string name="TheAgeRange">محدوده سنی</string>
    <string name="TheAgeRange2">محدوده سنی *</string>
    <string name="HaveInsurance">بیمه دارد:</string>
    <string name="WorkExperience">سابقه کار:</string>
    <string name="Have">داشته باشد</string>
    <string name="DontHave">لازم نیست</string>
    <string name="Delete">حذف</string>
    <string name="Edit">ویرایش</string>
    <string name="Undo">بازیابی</string>
    <string name="Optional">اختیاری</string>
    <string name="SeeResume">نمایش رزومه</string>
    <string name="RemoveResume">حذف رزومه</string>
    <string name="CellPhone">شماره تماس:</string>
    <string name="Madrak4">مدرک تحصیلی:</string>
    <string name="Select">انتخاب</string>
    <string name="Cancel">صرف نظر</string>
    <string name="Inventory">موجودی</string>
    <string name="ChargeWallet">شارژ کیف پول</string>
    <string name="TransactionUnsuccessful">تراکنش ناموفق</string>
    <string name="Birth">تولد:</string>
    <string name="SeeCV">نمایش رزومه</string>
    <string name="Telegram">تلگرام</string>
    <string name="Instagram">اینستاگرام</string>
    <string name="WhatsApp">واتس اپ</string>
    <string name="UpgradeAdTo">ارتقا آگهی به:</string>
    <string name="YourNationalCode">کد معرف شما:</string>
    <string name="ShareYourNationalCode">اشتراک برای دوستان</string>
    <string name="Share">اشتراک</string>
    <string name="MyRefrenceCode">کد معرف من</string>
    <string name="NotNo">فعلا نه</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="Agreement">توافقی</string>
    <string name="Titr">سر تیتر: </string>
    <string name="AbsuluteNews">چکیده خبر: </string>
    <string name="Date">تاریخ: </string>
    <string name="RecordedIn">ثبت شده در: </string>
</resources>
