<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:layoutDirection="rtl"
    android:textDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0.5dp"
            app:cardUseCompatPadding="false"
            android:clipToPadding="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPaleBlack"
                android:layout_marginTop="5dp"
                android:text="@string/SearchFilters"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/iran_sans"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Madrak"
                        android:textSize="16sp"
                        android:textColor="@color/colorPaleBlack"
                        android:fontFamily="@font/iran_sans"
                        android:gravity="center|right"
                        android:singleLine="true"/>

                    <Spinner
                        android:id="@+id/cmb_Madrak"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:spinnerMode="dialog"
                        android:layoutDirection="rtl"
                        android:textDirection="rtl"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Major"
                        android:textSize="16sp"
                        android:textColor="@color/colorPaleBlack"
                        android:fontFamily="@font/iran_sans"
                        android:gravity="center|right"
                        android:singleLine="true"/>

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:id="@+id/cmb_Major"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:spinnerMode="dialog"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Insurances"
                        android:textSize="16sp"
                        android:textColor="@color/colorPaleBlack"
                        android:fontFamily="@font/iran_sans"
                        android:gravity="center|right"
                        android:singleLine="true"/>

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:id="@+id/cmb_Insurance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:spinnerMode="dialog"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Gender2"
                        android:textSize="16sp"
                        android:textColor="@color/colorPaleBlack"
                        android:fontFamily="@font/iran_sans"
                        android:gravity="center|right"
                        android:singleLine="true"/>

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:id="@+id/cmb_Gender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:spinnerMode="dialog"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:fontFamily="@font/iran_sans"
            android:textColor="@color/colorBlack"
            android:text="@string/Certificates"
            android:gravity="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0.5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/chk_Base1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/GradeOne"
                        android:layoutDirection="ltr"
                        android:fontFamily="@font/iran_sans"
                        android:textSize="14sp"/>

                    <CheckBox
                        android:id="@+id/chk_Base2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/GradeTwo"
                        android:layoutDirection="ltr"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_sans"
                        android:textSize="14sp"/>

                    <CheckBox
                        android:id="@+id/chk_Base3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/GradeThird"
                        android:layoutDirection="ltr"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_sans"
                        android:textSize="14sp"/>

                    <CheckBox
                        android:id="@+id/chk_Special"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Special"
                        android:layoutDirection="ltr"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_sans"
                        android:textSize="14sp"/>

                </LinearLayout>

                <CheckBox
                    android:id="@+id/chk_Motorcycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="ltr"
                    android:text="@string/Motorcycle"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/iran_sans"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_ClearOptions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_btn_white"
                android:text="@string/ClearOptions"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:fontFamily="@font/iran_sans"/>

            <Button
                android:id="@+id/btn_Search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_btn_central"
                android:text="@string/Search"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:fontFamily="@font/iran_sans"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>